--- a/main.css
+++ b/main.css
@@ -1,4 +1,5 @@
 body {
+  background-image: linear-gradient(lightblue, cornflowerblue);
   display: flex;
   flex-direction: row;
   justify-content: center;
